# capsule

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: clang-tidy.yaml
src/: main.cpp
tests/setup/: README.md  version  version.cpp  violation.cpp
